<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_width"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/Blue"
                app:subtitleTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:subtitleTextColor="@color/white"
                app:titleTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:titleTextColor="@color/white"></androidx.appcompat.widget.Toolbar>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleTextViewMainTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/titleTextViewMainTV_Text"
                android:textColor="@color/Blue"
                android:textSize="@dimen/textSiZeTitleTV"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/firstImageMainIV"
                android:layout_width="@dimen/imageSizeMain"
                android:layout_height="@dimen/imageSizeMain"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/marginTop"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:src="@drawable/firstimage"></ImageView>

            <TextView
                android:id="@+id/sloganMainTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:gravity="center"
                android:text="@string/sloganMainTV_Text"
                android:textColor="@color/Blue"
                android:textSize="@dimen/textSiZeTitleTV"
                android:textStyle="italic"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity=""
            android:orientation="vertical">

            <Button
                android:id="@+id/startTrainingSessionBT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/marginTop"
                android:backgroundTint="@color/Transparent"
                android:text="@string/startTrainingSessionBT_Text"
                android:textColor="@color/Blue_purple"
                android:textSize="@dimen/textSiZeBT"></Button>
        </LinearLayout>

    </LinearLayout>


</ScrollView>